# kinematic_arbiter

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  deploy_docs.sh  genindex.html  index.html  objects.inv  package.xml  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: ci_actions.yml  ros_ci.yaml
_sources/: index.rst.txt
_sources/api/: classkalman__filter__node_1_1KalmanFilterNode.rst.txt  classkinematic__arbiter_1_1core_1_1MeasurementModelInterface.rst.txt  classkinematic__arbiter_1_1core_1_1MediatedKalmanFilter.rst.txt  classkinematic__arbiter_1_1core_1_1StateModelInterface.rst.txt  classkinematic__arbiter_1_1models_1_1RigidBodyStateModel.rst.txt  classkinematic__arbiter_1_1ros2_1_1ExpectedPosePublisher.rst.txt  classkinematic__arbiter_1_1ros2_1_1ExpectedSensorPublisher.rst.txt  classkinematic__arbiter_1_1ros2_1_1FilterWrapper.rst.txt  (+216 more)
action/: FilterMediation.action
api/: classkalman__filter__node_1_1KalmanFilterNode.html  classkinematic__arbiter_1_1core_1_1MeasurementModelInterface.html  classkinematic__arbiter_1_1core_1_1MediatedKalmanFilter.html  classkinematic__arbiter_1_1core_1_1StateModelInterface.html  classkinematic__arbiter_1_1models_1_1RigidBodyStateModel.html  classkinematic__arbiter_1_1ros2_1_1ExpectedPosePublisher.html  classkinematic__arbiter_1_1ros2_1_1ExpectedSensorPublisher.html  classkinematic__arbiter_1_1ros2_1_1FilterWrapper.html  classkinematic__arbiter_1_1ros2_1_1ImuSensorHandler.html  classkinematic__arbiter_1_1ros2_1_1KinematicArbiterNode.html  classkinematic__arbiter_1_1ros2_1_1PoseSensorHandler.html  classkinematic__arbiter_1_1ros2_1_1PositionSensorHandler.html  classkinematic__arbiter_1_1ros2_1_1SensorHandler.html  classkinematic__arbiter_1_1ros2_1_1VelocitySensorHandler.html  classkinematic__arbiter_1_1ros2_1_1simulation_1_1Figure8SimulatorNode.html  classkinematic__arbiter_1_1ros2_1_1simulation_1_1ImuPublisher.html  classkinematic__arbiter_1_1ros2_1_1simulation_1_1PosePublisher.html  classkinematic__arbiter_1_1ros2_1_1simulation_1_1PositionPublisher.html  classkinematic__arbiter_1_1ros2_1_1simulation_1_1SensorPublisher.html  classkinematic__arbiter_1_1ros2_1_1simulation_1_1VelocityPublisher.html  classkinematic__arbiter_1_1ros2_1_1utils_1_1TimeManager.html  classkinematic__arbiter_1_1sensors_1_1BodyVelocitySensorModel.html  classkinematic__arbiter_1_1sensors_1_1ImuBiasEstimator.html  classkinematic__arbiter_1_1sensors_1_1ImuSensorModel.html  classkinematic__arbiter_1_1sensors_1_1PoseSensorModel.html  classkinematic__arbiter_1_1sensors_1_1PositionSensorModel.html  classmediated__filter__node_1_1MediatedFilterNode.html  classsignal__generator__node_1_1SignalGeneratorNode.html  classsrc_1_1single__dof__demo_1_1core_1_1filter__output_1_1Estimate.html  classsrc_1_1single__dof__demo_1_1core_1_1filter__output_1_1FilterOutput.html  classsrc_1_1single__dof__demo_1_1core_1_1filter__output_1_1StateMeasurementPair.html  classsrc_1_1single__dof__demo_1_1core_1_1kalman__filter_1_1KalmanFilter.html  classsrc_1_1single__dof__demo_1_1core_1_1mediated__kalman__filter_1_1MediatedKalmanFilter.html  classsrc_1_1single__dof__demo_1_1core_1_1mediated__kalman__filter_1_1Mediation.html  classsrc_1_1single__dof__demo_1_1core_1_1signal__generator_1_1SignalParams.html  classsrc_1_1single__dof__demo_1_1core_1_1signal__generator_1_1SingleDofSignalGenerator.html  classsrc_1_1single__dof__demo_1_1display__gui_1_1DisplayGui.html  classsrc_1_1single__dof__demo_1_1ros2_1_1domain__models_1_1FilterParameters.html  classsrc_1_1single__dof__demo_1_1ros2_1_1domain__models_1_1MediationMode.html  classsrc_1_1single__dof__demo_1_1ros2_1_1domain__models_1_1State.html  (+197 more)
config/: figure8_simulation.yaml  filter_params.yaml  plot_juggler_config.xml  position_figure8_estimate.json  sensed_gyro_figure8_estimate.json  sensed_position_figure8_estimate.json  single_dof_demo.json
doc/: constrained_directional_velocity _sensor_model.tex  figure8_trajectory.tex  iimu_model.tex  mediated_kalman_filter.bcf  mediated_kalman_filter.blg  mediated_kalman_filter.run.xml  mediated_kalman_filter.tex  motion_model.tex  partial_derivation_of_quaternion_jacobian.tex  quaternion_update_jacobian.tex
docs/: Doxyfile  figure8_trajectory.aux  figure8_trajectory.tex  iimu_model.aux  mediated_kalman_filter.aux  mediated_kalman_filter.bbl  mediated_kalman_filter.out  motion_model.aux  references.bib
launch/: figure8_test.launch.py  simplified_demo.launch.py  single_dof_demo.launch.py
rviz/: figure8_visualization.rviz  filter_demo.rviz
src/ros2/: main.cpp  (+3 more)
test/: CMakeLists.txt  mediated_kalman_filter_test.cpp
test/config/: figure8_test_config.yaml  test_params.yaml
test/core/: filter_initialization_test.cpp  mediated_kalman_filter_test.cpp  statistical_utils_test.cpp  trajectory_utils_test.cpp
test/integration/: CMakeLists.txt  test_drake_integration.cpp
test/kinematic_arbiter/: CMakeLists.txt
test/kinematic_arbiter/core/: CMakeLists.txt  dynamic_covariance_test.cpp  statistical_utils_test.cpp  test_utils.hpp
test/kinematic_arbiter/models/: CMakeLists.txt
test/kinematic_arbiter/sensors/: body_velocity_sensor_model_test.cpp  pose_sensor_model_test.cpp
test/launch/: figure8_simulator_test.launch.py  figure8_tracking_test.launch.py  kinematic_arbiter_test.launch.py  test_params.launch.py
test/models/: rigid_body_state_model_test.cpp
test/ros2/: figure8_simulator_test.cpp  figure8_tracking_test.cpp  filter_wrapper_test.cpp  kinematic_arbiter_test.cpp  mkf_wrapper_test.cpp  mkf_wrapper_time_test.cpp  parameter_test.cpp  sensor_handlers_test.cpp  time_manager_test.cpp  time_utils_test.cpp
test/sensors/: body_velocity_sensor_model_test.cpp  heading_velocity_sensor_model_test.cpp  imu_bias_estimator_test.cpp  imu_prediction_inputs_test.cpp  imu_sensor_jacobian_test.cpp  imu_sensor_model_test.cpp  imu_sensor_mounting_test.cpp  imu_stationary_test.cpp  pose_sensor_model_test.cpp  position_sensor_model_test.cpp
test/single_dof_demo/: test_filter_node.py  test_integration.py
test/utils/: test_trajectories.hpp
(+1472 files in other folders)
